--- a/src/main/resources/templates/fragments/adminHeader.html
+++ b/src/main/resources/templates/fragments/adminHeader.html
@@ -25,22 +25,22 @@
         <div class="sidebar-menu">
             <!-- 기본 메뉴 그룹 -->
             <div class="menu-group">
-                <a href="#" class="menu-item">대시보드</a>
+                <a href="/admin_dashboard" class="menu-item">대시보드</a>
                 <a href="/admin/admin_list" class="menu-item">관리자명단</a>
             </div>
 
             <!-- 회원 관리 그룹 -->
             <div class="menu-group">
                 <div class="menu-item main-menu">회원관리</div>
-                <a href="#" class="menu-item sub-menu">회원목록</a>
+                <a href="/admin_member2" class="menu-item sub-menu">회원목록</a>
                 <a href="#" class="menu-item sub-menu">제재내역</a>
-                <a href="#" class="menu-item">이력서관리</a>
+                <a href="/admin_resume" class="menu-item">이력서관리</a>
             </div>
 
             <!-- 기업 관리 그룹 -->
             <div class="menu-group">
                 <div class="menu-item main-menu">기업관리</div>
-                <a href="#" class="menu-item sub-menu">기업목록</a>
+                <a href="/admin_corp2" class="menu-item sub-menu">기업목록</a>
                 <a href="#" class="menu-item sub-menu">제재목록</a>
                 <a href="#" class="menu-item">리뷰관리</a>
                 <a href="#" class="menu-item">공고관리</a>
