--- a/src/main/resources/templates/fragments/adminHeader.html
+++ b/src/main/resources/templates/fragments/adminHeader.html
@@ -26,7 +26,8 @@
             <!-- 기본 메뉴 그룹 -->
             <div class="menu-group">
                 <a href="/admin_dashboard" class="menu-item">대시보드</a>
-                <a href="/admin/admin_list" class="menu-item">관리자명단</a>
+                <a th:href="@{/admin/admin_list}" class="menu-item">관리자명단</a>
+                <a th:href="@{/admin/notice_list}" class="menu-item">공지사항</a>
             </div>
 
             <!-- 회원 관리 그룹 -->
@@ -49,8 +50,8 @@
             <!-- 고객센터 관리 그룹 -->
             <div class="menu-group">
                 <div class="menu-item main-menu">고객센터관리</div>
-                <a href="#" class="menu-item sub-menu">문의내역</a>
-                <a href="#" class="menu-item sub-menu">FAQ</a>
+                <a th:href="@{/admin/inquiry_list}" class="menu-item sub-menu">문의내역</a>
+                <a th:href="@{/admin/admin_faq}" class="menu-item sub-menu">FAQ</a>
             </div>
         </div>
     </nav>
