--- a/src/main/resources/templates/admin/admin_member_detail.html
+++ b/src/main/resources/templates/admin/admin_member_detail.html
@@ -100,17 +100,31 @@
 </tr>
 </tbody>
 </table>
+
+<span th:if="${member.activeStatus==0}">
 <form action="/admin_sanction">
-<input type="hidden" name="name" th:value="${member.name}"/>
+<input type="hidden" name="email" th:value="${member.email}"/>
 <input type="button" value="제재하기" onclick="submit();"/>
-<input type="button" value="뒤로가기" onclick="history.back();">
 </form>
+</span>
+<span th:if="${member.activeStatus==1}">
+<form action="/admin_sanction_cancel">
+<input type="hidden" name="email" th:value="${member.email}"/>
+<input type="button" value="제재 취소하기" onclick="submit();"/>
+</form>
+</span>
+<a href="/admin_member2">
+  <input type="button" value="뒤로가기" />
+</a>
+
 </div>
 <!-- jquery CDN -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script type="text/javascript">
 $(function(){
-
+	$("btn").click(function(){
+		alert("제재 취소?");
+	})
 });
 
 </script>
