--- a/src/main/resources/templates/admin/admin_sanction.html
+++ b/src/main/resources/templates/admin/admin_sanction.html
@@ -79,6 +79,7 @@
 <td>제재사유</td>
 <td><input type="textarea" name="content"/></td>
 </tr>
+<input type="hidden" name="email" th:value="${member.email}"/>
 <input type="submit" id="test" value="이메일 보내기"/>
 </table>
 </form>
