--- a/src/main/resources/templates/user/mypage/mypage.html
+++ b/src/main/resources/templates/user/mypage/mypage.html
@@ -28,7 +28,7 @@
 		<div class="stats-grid">
    		<div class="stats-item">
         	<div class="stats-label">지원완료</div>
-        	<div class="stats-number highlight" th:text="${statistics.completed}"></div>
+        	<div class="stats-number" th:text="${statistics.completed}"></div>
     	</div>
     	<div class="stats-item">
         	<div class="stats-label">전형 진행중</div>
