--- a/src/main/resources/templates/user/mypage/apply_list.html
+++ b/src/main/resources/templates/user/mypage/apply_list.html
@@ -29,19 +29,19 @@
 					<div class="stats-grid">
 						<div class="stats-item" data-filter="all">
 							<div class="stats-label">지원완료</div>
-							<div class="stats-number" th:text="${statistics.completed}">1</div>
+							<div class="stats-number" th:classappend="${search.type == null or search.type=='all'}?' highlight'" th:text="${statistics.completed}">1</div>
 						</div>
 						<div class="stats-item" data-filter="passed">
 							<div class="stats-label">서류 통과</div>
-							<div class="stats-number" th:text="${statistics.docPassed}">0</div>
+							<div class="stats-number" th:classappend="${search.type=='passed'}?' highlight'" th:text="${statistics.docPassed}">0</div>
 						</div>
 						<div class="stats-item" data-filter="hired">
 							<div class="stats-label">최종합격</div>
-							<div class="stats-number" th:text="${statistics.passed}">0</div>
+							<div class="stats-number" th:classappend="${search.type=='hired'}?' highlight'" th:text="${statistics.passed}">0</div>
 						</div>
 						<div class="stats-item" data-filter="rejected">
 							<div class="stats-label">불합격</div>
-							<div class="stats-number" th:text="${statistics.failed}">0</div>
+							<div class="stats-number" th:classappend="${search.type=='rejected'}?' highlight'" th:text="${statistics.failed}">0</div>
 						</div>
 					</div>
 
