--- a/src/main/resources/templates/login/joinUserForm.html
+++ b/src/main/resources/templates/login/joinUserForm.html
@@ -25,7 +25,7 @@ $(function(){
 	//딸깍 랜덤 이력서 100000개 생성
 	document.querySelector('#createRandomResume').addEventListener('click', () => {
 		if(confirm("유저 1000명 이력서를 랜덤으로 생성하시겠습니까? 정말로?")){
-			///addTenThousandResumes();
+			addTenThousandResumes();
 		}
 	});
 	
