--- a/src/main/resources/templates/admin/admin_member2.html
+++ b/src/main/resources/templates/admin/admin_member2.html
@@ -71,6 +71,10 @@ input[type="submit"]:hover {
 <form action="/admin_member_search2">
 <table class="table table-bordered" >
 <tr>
+<td>이메일</td>
+<td colspan="2"><input type="text" id="email" name="email"/></td>
+</tr>
+<tr>
 <td>이름</td>
 <td colspan="2"><input type="text" id="name" name="name"/></td>
 </tr>
