--- a/src/main/resources/templates/admin/admin_corp_detail.html
+++ b/src/main/resources/templates/admin/admin_corp_detail.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="shortcut icon" href="http://localhost/images/favicon.png"/>
-
-  <style>
+ <style>
     body {
       background-color: #f5f6fa;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -64,65 +63,46 @@
   </style>
 </head>
 <body>
-<th:block th:replace="fragments/adminHeader :: adminHeader"></th:block>
 
+<th:block th:replace="fragments/adminHeader :: adminHeader"></th:block>
 <div class="container">
 <table border="1">
 <tbody>
 <tr>
-<td>성명</td>
-<td th:text="${member.name}"></td>
-<td>이메일</td>
-<td th:text="${member.email}"></td>
+<td>사업번호</td>
+<td th:text="${corp.corpNo}"></td>
+<td>사업명</td>
+<td th:text="${corp.corpNm}"></td>
 </tr>
 <tr>
-<td>역활</td>
-<td>
-<span th:if="${member.role == 'ROLE_CORP'}">기업</span>
-<span th:if="${member.role == 'ROLE_USER'}">유저</span>
-</td>
-<td>활동상태</td>
-<td th:text="${member.activeStatus == 0 ? '활동중' : (member.activeStatus == 1 ? '회원제재' : (member.activeStatus == 2 ? '회원탈퇴' : '알 수 없음'))}"></td>
+<td>사업정보</td>
+<td th:text="${corp.corpInfo}"></td>
+<td>URL</td>
+<td th:text="${corp.corpUrl}"></td>
 </tr>
 <tr>
-<td>가입일자</td>
-<td th:text="${member.regDt}"></td>
-<td>생일</td>
-<td th:text="${member.birth}"></td>
+<td>평균연봉</td>
+<td th:text="${corp.corpAvgSal}"></td>
+<td>매출액</td>
+<td th:text="${corp.corpAnnualRevenue}"></td>
 </tr>
 <tr>
-<td>전화번호</td>
-<td th:text="${member.phone}"></td>
-<td>성별</td>
-<td>
-<span th:if="${member.gender == 'M'}">남자</span>
-<span th:if="${member.gender == 'F'}">여자</span>
-</td>
+<td>생성일</td>
+<td th:text="${corp.corpCreatedAt}"></td>
+<td>사원수</td>
+<td th:text="${corp.corpEmpCnt}"></td>
 </tr>
-
 <tr>
-<td>주소</td>
-<td colspan="3" th:text="${member.road_address}+' '+${member.detail_address}"></td>
+<td>산업명</td>
+<td th:text="${corp.industry}"></td>
+<td>CEO</td>
+<td th:text="${corp.corpCeo}"></td>
 </tr>
 </tbody>
 </table>
-
-<span th:if="${member.activeStatus==0}">
-<form action="/admin_sanction">
-<input type="hidden" name="email" th:value="${member.email}"/>
-<input type="button" value="제재하기" onclick="submit();"/>
-</form>
-</span>
-<span th:if="${member.activeStatus==1}">
-<form action="/admin_sanction_cancel">
-<input type="hidden" name="email" th:value="${member.email}"/>
-<input type="button" value="제재 취소하기" onclick="submit();"/>
-</form>
-</span>
-<a href="/admin_member2">
+<a href="/admin_corp2">
   <input type="button" value="뒤로가기" />
 </a>
-
 </div>
 <!-- jquery CDN -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
