--- a/src/main/resources/templates/admin/admin_sanction.html
+++ b/src/main/resources/templates/admin/admin_sanction.html
@@ -82,7 +82,9 @@
 <input type="hidden" name="email" th:value="${member.email}"/>
 <input type="submit" id="test" value="이메일 보내기"/>
 </table>
+<input type="button" value="뒤로가기" onclick="history.back()" />
 </form>
+
 
 <!-- jquery CDN -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
